Fix main layout bug

--- a/src/app/components/main-layout/main-layout.component.css
+++ b/src/app/components/main-layout/main-layout.component.css
@@ -13,7 +13,7 @@
 	padding: 32px 32px 56px;
 }
 
-.sidenav {
+.desktop-sidenav {
 	display: flex;
 	margin-top: 30%;
 	font-family: Roboto;
@@ -27,23 +27,61 @@
 	display: none;
 }
 
+
 .mobile {
 	display: none;
 }
-
 
 
 @media (min-width: 768px) {
 	.desktop {
 		display: inline;
 	}
+	.mobile {
+		display: none;
+	}
 
 }
 
 @media (max-width: 768px) {
 
+	
+
 	.mobile {
 		display: inline;
+	}
+
+	.mobile-sidenav {
+		display: flex;
+		margin-top: 0%;
+		font-family: Roboto;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 24px;
+		line-height: 28px;
+	}
+
+	
+	.side-drawer {
+		min-width: 339px;
+		padding: 32px 32px 56px;
+		border-radius: 32px 0px 0px 32px;
+	}
+
+	.close-btn {
+		margin-bottom: 35px;
+		left: 80%;
+	}
+	
+	.content {
+		padding: 32px;
+	}
+	
+	.header {
+		margin-bottom: 32px;
+	
+		display: flex;
+		justify-content: space-between;
 	}
 	
 	
